Added OPD arcgis data loader during testing

--- a/python/predict_urls/predict_urls.ipynb
+++ b/python/predict_urls/predict_urls.ipynb
@@ -15,7 +15,8 @@
    "source": [
     "#### TO-DO\n",
     "- complete testing\n",
-    "- Might need requirements.txt and how to code for that, using % to install packages"
+    "- Might need requirements.txt and how to code for that, using % to install packages\n",
+    "- add check if URL already in source table"
    ]
   },
   {
@@ -28,39 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ce3e171e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"python/predict_urls\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "36441bb8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'d:\\\\Data Projects\\\\opd\\\\OPD-data\\\\opd-data\\\\python\\\\predict_urls'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "d891278c",
    "metadata": {},
    "outputs": [],
@@ -78,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "bcfdfc67",
    "metadata": {},
    "outputs": [
@@ -86,23 +55,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0\n",
-      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0\n"
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2026_csv/FeatureServer/0: not valid (status: ArcGIS check)\n",
+      "No valid URL found.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = \"https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0\"\n",
+    "url = \"https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2025_csv/FeatureServer/0\"\n",
     "extra_fields = {\n",
     "    \"State\": \"CA\",\n",
     "    \"SourceName\": \"Example PD\",\n",
@@ -117,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7f8fb34c",
    "metadata": {},
    "outputs": [],
@@ -127,21 +86,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a5328b42",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resp = requests.head(url, allow_redirects=False, timeout=10)\n",
     "resp.status_code"
