Added more data_loaders and mapping for their required fields

--- a/python/predict_urls/predict_urls.ipynb
+++ b/python/predict_urls/predict_urls.ipynb
@@ -16,7 +16,8 @@
     "#### TO-DO\n",
     "- complete testing\n",
     "- Might need requirements.txt and how to code for that, using % to install packages\n",
-    "- add check if URL already in source table"
+    "- add check if URL already in source table\n",
+    "- Is there a get data loader function?"
    ]
   },
   {
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "d891278c",
    "metadata": {},
    "outputs": [],
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "bcfdfc67",
    "metadata": {},
    "outputs": [
@@ -55,14 +56,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2026_csv/FeatureServer/0: not valid (status: ArcGIS check)\n",
-      "No valid URL found.\n"
+      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0 (status: ArcGIS check)\n",
+      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = \"https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2025_csv/FeatureServer/0\"\n",
-    "extra_fields = {\n",
+    "url = \"https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2016_csv/FeatureServer/0\"\n",
+    "spreadsheet_fields = {\n",
     "    \"State\": \"CA\",\n",
     "    \"SourceName\": \"Example PD\",\n",
     "    \"Agency\": \"EXPD\",\n",
@@ -71,7 +82,7 @@
     "    \"DataType\": \"ArcGIS\"\n",
     "}\n",
     "\n",
-    "prediction_funcs.try_url_years(url, n_years=1, forward=True, extra_fields=extra_fields)"
+    "prediction_funcs.try_url_years(url, n_years=3, forward=True, extra_fields=extra_fields)"
    ]
   },
   {
