Added coverage dates to try_url_years.

--- a/python/predict_urls/predict_urls.ipynb
+++ b/python/predict_urls/predict_urls.ipynb
@@ -16,8 +16,7 @@
     "#### TO-DO\n",
     "- complete testing\n",
     "- Might need requirements.txt and how to code for that, using % to install packages\n",
-    "- add check if URL already in source table\n",
-    "- Is there a get data loader function?"
+    "- add check if URL already in source table"
    ]
   },
   {
@@ -30,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "d891278c",
    "metadata": {},
    "outputs": [],
@@ -48,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bcfdfc67",
    "metadata": {},
    "outputs": [
@@ -56,19 +55,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0 (status: ArcGIS check)\n",
-      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0\n"
+      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
+      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0\n",
+      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
+      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0\n",
+      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2019_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
+      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2019_csv/FeatureServer/0\n",
+      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2020_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
+      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2020_csv/FeatureServer/0\n",
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2021_csv/FeatureServer/0: not valid. Skipping.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0'"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -79,10 +75,11 @@
     "    \"Agency\": \"EXPD\",\n",
     "    \"AgencyFull\": \"Example Police Department\",\n",
     "    \"TableType\": \"Arrests\",\n",
-    "    \"DataType\": \"ArcGIS\"\n",
+    "    \"DataType\": \"ArcGIS\",\n",
+    "    \"date_field\": \"calldatetime\" \n",
     "}\n",
     "\n",
-    "prediction_funcs.try_url_years(url, n_years=3, forward=True, extra_fields=extra_fields)"
+    "prediction_funcs.try_url_years(url, forward=True, spreadsheet_fields=spreadsheet_fields)"
    ]
   },
   {
