Added check and handling for URLs already in source csv.

--- a/python/predict_urls/predict_urls.ipynb
+++ b/python/predict_urls/predict_urls.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "#### TO-DO\n",
     "- complete testing\n",
-    "- Might need requirements.txt and how to code for that, using % to install packages\n",
-    "- add check if URL already in source table"
+    "- Might need requirements.txt and how to code for that, using % to install packages"
    ]
   },
   {
@@ -55,15 +54,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
-      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0\n",
-      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
-      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0\n",
-      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2019_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
-      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2019_csv/FeatureServer/0\n",
-      "Valid URL found: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2020_csv/FeatureServer/0. Adding to OPD_Source_table.\n",
-      "Added to OPD_Source_table: https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2020_csv/FeatureServer/0\n",
-      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2021_csv/FeatureServer/0: not valid. Skipping.\n"
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2017_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2019_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2020_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2021_csv/FeatureServer/0 in spreadsheet but no longer valid. Removing and logging as deleted.\n"
      ]
     }
    ],
@@ -76,10 +71,10 @@
     "    \"AgencyFull\": \"Example Police Department\",\n",
     "    \"TableType\": \"Arrests\",\n",
     "    \"DataType\": \"ArcGIS\",\n",
-    "    \"date_field\": \"calldatetime\" \n",
+    "    # \"date_field\": \"calldatetime\" \n",
     "}\n",
     "\n",
-    "prediction_funcs.try_url_years(url, forward=True, spreadsheet_fields=spreadsheet_fields)"
+    "prediction_funcs.try_url_years(url, forward=True, verbose=True, spreadsheet_fields=spreadsheet_fields)"
    ]
   },
   {
@@ -88,20 +83,7 @@
    "id": "7f8fb34c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import requests"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5328b42",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "resp = requests.head(url, allow_redirects=False, timeout=10)\n",
-    "resp.status_code"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
