First function good to go. REbuilding second function to test already existing URLs

--- a/python/predict_urls/predict_urls.ipynb
+++ b/python/predict_urls/predict_urls.ipynb
@@ -45,8 +45,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aab1874e",
+   "metadata": {},
+   "source": [
+    "**Additional spreadsheet fields:**\n",
+    "\"Description\", \"source_url\", \"readme\", \"date_field\",\n",
+    "\"agency_field\", \"min_version\", \"query\"\n",
+    "\n",
+    "The `try_urls_years` function auto-fills the spreadsheet's \"URL\", \"Year\",\"last_coverage_check\", \"coverage_start\", and \"coverage_end\"."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "bcfdfc67",
    "metadata": {},
    "outputs": [
@@ -58,32 +70,25 @@
       "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2018_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
       "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2019_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
       "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2020_csv/FeatureServer/0 already in spreadsheet and valid. Updated last_coverage_check.\n",
-      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2021_csv/FeatureServer/0 in spreadsheet but no longer valid. Removing and logging as deleted.\n"
+      "https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2021_csv/FeatureServer/0: not valid. Skipping.\n"
      ]
     }
    ],
    "source": [
     "url = \"https://opendata.baltimorecity.gov/egis/rest/services/Hosted/911_Calls_For_Service_2016_csv/FeatureServer/0\"\n",
-    "spreadsheet_fields = {\n",
+    "spreadsheet_fields = { #required fields\n",
     "    \"State\": \"CA\",\n",
     "    \"SourceName\": \"Example PD\",\n",
     "    \"Agency\": \"EXPD\",\n",
     "    \"AgencyFull\": \"Example Police Department\",\n",
     "    \"TableType\": \"Arrests\",\n",
-    "    \"DataType\": \"ArcGIS\",\n",
-    "    # \"date_field\": \"calldatetime\" \n",
+    "    \"DataType\": \"ArcGIS\"\n",
+    "    # below required if \"DataType\" = \"Carto\" or \"Ckan\"\n",
+    "    # , dataset_id\": \"example-dataset-id\" \n",
     "}\n",
     "\n",
     "prediction_funcs.try_url_years(url, forward=True, verbose=True, spreadsheet_fields=spreadsheet_fields)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f8fb34c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
