Completed Notebook resource

--- a/python/predict_urls/predict_urls.ipynb
+++ b/python/predict_urls/predict_urls.ipynb
@@ -10,19 +10,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c654dfe",
+   "id": "43085b45",
    "metadata": {},
    "source": [
-    "#### TO-DO\n",
-    "- Might need requirements.txt and how to code for that, using % to install packages"
+    "## Environment pre-reqs\n",
+    "To install all required packages from `requirements.txt` in this folder, run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7430573c",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pip install -r requirements.txt"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "351efed0",
+   "id": "4e8a5367",
    "metadata": {},
    "source": [
-    "## Env and packages"
+    "Or, if you are using conda, you can create a new environment and install the requirements with:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8e64df4",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "conda create -n opd-env python=3.11\n",
+    "conda activate opd-env\n",
+    "pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "896e49d8",
+   "metadata": {},
+   "source": [
+    "## Prediction functions"
    ]
   },
   {
@@ -32,6 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import local script\n",
     "import prediction_funcs"
    ]
   },
@@ -96,8 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "074420b7",
+   "execution_count": 3,
+   "id": "bcfdfc67",
    "metadata": {},
    "outputs": [],
    "source": [
